2006.06.01
----------
- continue work on species editor

2006.05.30
----------
- did some work on the species editor and the vernacular name editor, can now
set default vernacular names for the species

2006.05.29
----------
- can no longer set attributes in SQLObjectProxy that don't exist, this helps
reduce possible bugs
- first pass at adding vernacular names in the species editor

2006.05.29
----------
- got the basics working on the species editor
- first pass at adding synonyms with new species editor

2006.05.28
----------
- did some work to try and improve the speed of displaying strings
- cleaned up SearchView.search and added status bar message for the number of 
results in a search

2006.05.27
----------
- started toying around with the species editor
- alot of changes in the plants plugin, all species model definitions were
moved to species_model.py while all editor(and for now infoboxes) for species
model are in species_model.py
- changed all plugins to use absolute instead of relative paths
- fixed problem with acc_id_entry and the sensitivity/self.problems

2006.05.23
----------
- changed the way that the accession editor displays when something is wrong
with an entry, the old way using event boxes didn't work like i thought
- moved Problems class into editor.py and added self.problem to 
GenericEditorPresenter and added GenericEditorPresenter.add_problem and 
GenericEditorPresenter.remove_problem
- fix calculation error with accession.dms_to_decimal when the direction is 
west or source, i.e. negative
- don't save the elevation accuracy for the accession if the elevation is None
- make sure that both or neither latitude and longitude are required
- don't save geo accuracy of latitude and longitude are none
- desensitize geoacc_entry if latitude or longitude are None
- desensitize altacc_entry if alt_entry is None
- accession editor gui tweaks for win32
- add dms labels back to accession editor which i accidentaly deleted

2006.05.23
----------